--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-cli": "^6.10.1",
+    "babel-node-debug": "^2.0.0",
     "babel-preset-es2015": "6.9.0"
   },
   "dependencies": {
