--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "babel-preset-es2015": "6.9.0"
   },
   "dependencies": {
+    "babel-node-debug": "2.0.0",
+    "es6-promisify": "4.1.0",
     "ipfs": "0.14.1",
-    "lodash": "4.13.1"
+    "ipfs-api": "6.0.3",
+    "lodash": "4.13.1",
+    "rimraf": "2.5.2"
   }
 }
