--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ipfs-merkle-dag": "^0.6.0",
     "lodash": "4.13.1",
     "most": "^0.19.7",
+    "ramda": "^0.21.0",
     "rimraf": "2.5.2"
   }
 }
