--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-preset-es2015": "6.9.0"
   },
   "dependencies": {
+    "babel-cli": "^6.10.1",
     "babel-node-debug": "2.0.0",
     "bs58": "^3.0.0",
     "es6-promisify": "4.1.0",
