--- a/package.json
+++ b/package.json
@@ -13,17 +13,6 @@
     "babel-preset-es2015": "6.9.0"
   },
   "dependencies": {
-    "babel-cli": "^6.10.1",
-    "babel-node-debug": "2.0.0",
-    "bs58": "^3.0.0",
-    "es6-promisify": "4.1.0",
-    "ipfs": "0.14.1",
-    "ipfs-api": "6.0.3",
-    "ipfs-merkle-dag": "^0.6.0",
-    "lodash": "4.13.1",
-    "most": "^0.19.7",
-    "ramda": "^0.21.0",
-    "rimraf": "2.5.2",
-    "stream-to-promise": "^2.1.1"
+    "babel-cli": "^6.10.1"
   }
 }
