--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-node-debug": "2.0.0",
     "bs58": "^3.0.0",
     "es6-promisify": "4.1.0",
+    "firebase": "3.2.0",
     "ipfs": "0.14.1",
     "ipfs-api": "6.0.3",
     "ipfs-merkle-dag": "^0.6.0",
