--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "babel-node-debug": "2.0.0",
+    "baconjs": "0.7.84",
     "bs58": "^3.0.0",
     "es6-promisify": "4.1.0",
     "firebase": "3.2.0",
