--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Module for composing higher-order meaning from sensor data",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node light.js",
+    "start": "babel-node sound.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
