--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "babel-preset-es2015": "6.9.0"
   },
   "dependencies": {
-    "babel-cli": "^6.10.1"
+    "babel-cli": "^6.10.1",
+    "most": "^0.19.7",
+    "ramda": "^0.21.0"
   }
 }
