--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "babel-cli": "^6.10.1",
     "most": "^0.19.7",
-    "ramda": "^0.21.0"
+    "ramda": "^0.21.0",
+    "firebase": "3.2.0"
   }
 }
