change to composer

--- a/fb_config.json
+++ b/fb_config.json
@@ -1,5 +1,5 @@
 {
-  "nodeId": "AAA",
+  "nodeId": "Composed",
   "relayUrl": "https://nomad-53910.firebaseio.com",
-  "subIds": ["BBB", "CCC", "AAA"]
+  "subIds": ["Light", "Sound"]
 }
