compose explosion sensor from streams of sound and light

--- a/fb_config.json
+++ b/fb_config.json
@@ -1,5 +1,5 @@
 {
-  "nodeId": "composed",
+  "nodeId": "explosion",
   "relayUrl": "https://nomad-53910.firebaseio.com",
   "subIds": ["light", "sound"]
 }
