--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "lodash": "4.13.1",
     "most": "^0.19.7",
     "ramda": "^0.21.0",
-    "rimraf": "2.5.2"
+    "rimraf": "2.5.2",
+    "twilio": "^2.9.1"
   }
 }
