--- a/package.json
+++ b/package.json
@@ -1,27 +1,22 @@
 {
-  "name": "magic-bus",
-  "version": "0.0.1",
-  "description": "Module for composing higher-order meaning from sensor data",
+  "name": "demo-interface",
+  "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack --watch"
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "babel-preset-es2015": "6.9.0"
-  },
   "dependencies": {
-    "babel-node-debug": "2.0.0",
-    "bs58": "^3.0.0",
-    "es6-promisify": "4.1.0",
-    "ipfs": "0.14.1",
-    "ipfs-api": "6.0.3",
-    "ipfs-merkle-dag": "^0.6.0",
-    "lodash": "4.13.1",
-    "most": "^0.19.7",
-    "ramda": "^0.21.0",
-    "rimraf": "2.5.2"
+    "babel-core": "6.11.4",
+    "babel-loader": "6.2.4",
+    "babel-preset-es2015": "6.9.0",
+    "babel-preset-stage-0": "6.5.0",
+    "firebase": "3.2.0",
+    "jquery": "3.1.0",
+    "ramda": "0.21.0",
+    "webpack": "1.13.1"
   }
 }
